changed db name and added users table migrations

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     image: mysql:latest
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: laravel_docker
+      MYSQL_DATABASE: microblog_db
     ports:
     - 3306:3306
   
