--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
-services:
+version: '3'
 
+services:
   laravel-docker:
     container_name: laravel-docker
     build: .
@@ -14,11 +15,13 @@ services:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: microblog_db
     ports:
-    - 3307:3306
-  
+      - 3307:3306
+
   phpmyadmin:
-    image: phpmyadmin:latest
+    image: phpmyadmin/phpmyadmin
     ports:
       - 9001:80
     environment:
       - PMA_ARBITRARY=1
+    depends_on:
+      - mysql_db
