added depends_on in docker-compose file (#16)
* added depends_on in docker-compose file

* Added Email Verification using MustVerifyEmail, appended email_verified_at to users table (#14)

* Working database retrieval and insertion in login and registration

* Commiting my current progress in DB of registration and login

* Used form Request for Registration, used laravel's builtin timestamps validation and fixed new lines

* Removed authorize() function, removed unnecessary comments and removed unused codes

* Added email verification using MustVerifyEmail

* added depends_on in docker-compose file

* added webserver apache to the composer file

* removed comment, aligned the space in webserver

---------

Co-authored-by: mikco-hipe <144191092+mikco-hipe@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
-services:
+version: '3'
 
+services:
   laravel-docker:
     container_name: laravel-docker
     build: .
@@ -14,11 +15,32 @@ services:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: microblog_db
     ports:
-    - 3307:3306
-  
+      - 3307:3306
+
   phpmyadmin:
-    image: phpmyadmin:latest
+    image: phpmyadmin/phpmyadmin
     ports:
       - 9001:80
     environment:
       - PMA_ARBITRARY=1
+    depends_on:
+      - mysql_db
+
+  webserver:
+    image: php:8.1.0-apache
+    container_name: webserver
+    volumes:
+      - ./laravel-app:/var/www/html
+    ports:
+      - 8080:80
+    depends_on:
+      - laravel-docker
+    command: ["apache2-foreground"]
+    links:
+      - laravel-docker
+    networks:
+      - laravel-network
+
+networks:
+  laravel-network:
+    driver: bridge
