feat: added pre-commit hooks,refactor some of the codes, added ci

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,10 @@ services:
       - ./laravel-app:/var/www/html
     ports:
       - 9000:80
-  
   mysql_db:
     image: mysql:latest
     environment:
-      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: sOQSO6DxD
       MYSQL_DATABASE: microblog_db
     ports:
       - 3307:3306
@@ -23,9 +22,13 @@ services:
       - 9001:80
     environment:
       - PMA_ARBITRARY=1
+      - PMA_HOST=mysql
+      - PMA_USER=root
+      - PMA_PASSWORD=sOQSO6DxD
     depends_on:
       - mysql_db
-
+    networks:
+      - laravel-network
   webserver:
     image: php:8.1.0-apache
     container_name: webserver
