--- a/laravel-app/package.json
+++ b/laravel-app/package.json
@@ -3,14 +3,31 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "prepare": "cd .. && husky install .husky",
+        "pre-commit": "lint-staged"
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
         "axios": "^1.1.2",
         "bootstrap": "^5.2.3",
+        "husky": "^8.0.3",
         "laravel-vite-plugin": "^0.8.0",
+        "lint-staged": "^12.5.0",
+        "prettier": "^2.3.2",
         "sass": "^1.56.1",
         "vite": "^4.0.0"
+    },
+    "lint-staged": {
+        "**/*.{css,js}": [
+            "eslint resources/js --fix",
+            "prettier --write"
+        ]   
+    },   
+    "husky": {
+        "hooks": {
+            "pre-commit": "npm run lint",
+            "pre-commit-php": "npm run lint:php"
+        }
     }
 }
