chore: add ci unit test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI Checks
+name: CI
 
 on:
   push:
@@ -13,9 +13,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
 
       - name: Cache Composer dependencies
         uses: actions/cache@v3
@@ -42,12 +39,6 @@ jobs:
           cd ./laravel-app
           composer install
 
-      - name: Save Composer dependencies cache
-        uses: actions/cache@v3
-        with:
-          path: ./laravel-app/vendor
-          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-
       - name: Check phpstan installation (Optional debugging step)
         run: |
           docker exec laravel-docker bash -c "ls -al /var/www/html/vendor/bin"
@@ -55,12 +46,6 @@ jobs:
       - name: Install NPM dependencies without scripts
         run: |
           docker exec laravel-docker bash -c "cd /var/www/html && npm install --ignore-scripts"
-
-      - name: Save NPM dependencies cache
-        uses: actions/cache@v3
-        with:
-          path: ./laravel-app/node_modules
-          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
 
       - name: Run larastan
         run: |
@@ -75,3 +60,53 @@ jobs:
       - name: Stop Docker Compose services
         run: |
           docker-compose down
+
+  run_tests:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Cache Composer dependencies
+        uses: actions/cache@v3
+        with:
+          path: ./laravel-app/vendor
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-composer-
+
+      - name: Cache NPM dependencies
+        uses: actions/cache@v3
+        with:
+          path: ./laravel-app/node_modules
+          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-
+
+      - name: Build and run Docker Compose services
+        run: |
+          docker compose up -d
+
+      - name: Install Composer dependencies
+        run: |
+          cd ./laravel-app
+          composer install
+
+      - name: Install NPM dependencies without scripts
+        run: |
+          docker exec laravel-docker bash -c "cd /var/www/html && npm install --ignore-scripts"
+
+      - name: Copy .env
+        run: |
+          php -r "if (!file_exists('laravel-app/.env')) { copy('laravel-app/.env.testing', 'laravel-app/.env'); }"
+
+      - name: Generate Laravel Key
+        run: docker exec laravel-docker php artisan key:generate --env=testing
+
+      - name: Create SQLite Database
+        run: touch laravel-app/database/database.sqlite
+
+      - name: Run tests
+        run: |
+          docker exec laravel-docker php artisan test
