attempt fix php stan error ignore

--- a/laravel-app/phpstan.neon
+++ b/laravel-app/phpstan.neon
@@ -15,3 +15,5 @@ parameters:
     checkUnusedViews: true
     excludePaths:
         - bootstrap/cache
+    ignoreErrors:
+        - '#PHPDoc tag @param#'
