added reset password to login

--- a/laravel-app/phpstan.neon
+++ b/laravel-app/phpstan.neon
@@ -12,6 +12,6 @@ parameters:
     checkModelProperties: true
     checkOctaneCompatibility: true
     checkGenericClassInNonGenericObjectType: false
-    checkUnusedViews: true
+    checkUnusedViews: false
     excludePaths:
         - bootstrap/cache
